--- a/package.json
+++ b/package.json
@@ -1,25 +1,52 @@
 {
-  "name": "react-snake-game",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "react-snake-game",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "classnames": "^2.2.6",
+        "immutable": "^4.0.0-rc.12",
+        "node-sass": "^4.11.0",
+        "normalize.css": "^8.0.1",
+        "prop-types": "^15.6.2",
+        "react": "^16.7.0",
+        "react-dom": "^16.7.0",
+        "react-redux": "^6.0.0",
+        "react-scripts": "2.1.2",
+        "redux": "^4.0.1",
+        "redux-thunk": "^2.3.0",
+        "reselect": "^4.0.0"
+    },
+    "scripts": {
+        "dev": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "prettier": "prettier-eslint --write \"src/**/*.{js,json,css}\"",
+        "lint": "eslint.cmd src/**/*.js"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "linters": {
+            "src/**/*.{js,json,css,md}": ["prettier-eslint --write", "git add"],
+            "src/**/*.js": "eslint --max-warnings 0"
+        },
+        "concurrent": false
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
+    "devDependencies": {
+        "eslint-config-airbnb-base": "^13.1.0",
+        "eslint-config-prettier": "^3.3.0",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-sonarjs": "^0.2.0",
+        "husky": "^1.3.1",
+        "lint-staged": "^8.1.0",
+        "prettier-eslint": "^8.8.2",
+        "prettier-eslint-cli": "^4.7.1"
+    }
 }
