--- a/package.json
+++ b/package.json
@@ -31,10 +31,7 @@
     },
     "lint-staged": {
         "linters": {
-            "src/**/*.{js,json,css,md}": [
-                "prettier-eslint --write",
-                "git add"
-            ],
+            "src/**/*.{js,json,css,md}": ["prettier-eslint --write", "git add"],
             "src/**/*.js": "eslint --max-warnings 0"
         },
         "concurrent": false
@@ -42,12 +39,8 @@
     "eslintConfig": {
         "extends": "react-app"
     },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
-        "not op_mini all"
-    ],
+    "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
+    "homepage": ".",
     "devDependencies": {
         "eslint-config-airbnb-base": "^13.1.0",
         "eslint-config-prettier": "^3.3.0",
